<resources>
    <string name="facebook_app_id">602633680141510</string>
    <string name="fb_login_protocol_scheme">fb602633680141510</string>
    <string name="app_name">ग़ज़ब एप</string>
    <string name="app_name_en">Gazab</string>
    <string name="back">पीछे</string>
    <string name="next">आगे</string>
    <string name="gender_title">अपना जेंडर बताएं</string>
    <string name="male">पुरुष</string>
    <string name="female">महिला</string>
    <string name="other">अन्य</string>
    <string name="birthdate_title">जन्मतिथी डालें</string>
    <string name="birthdate_enter_valid_date">मान्य तिथी डालें</string>
    <string name="welcome_to_gazab">ग़ज़ब में आपका स्वागत है</string>
    <string name="please_enter_your_mobile_no">अपना मोबाइल नंबर डालें</string>
    <string name="or">या</string>
    <string name="log_in_via">लॉग इन वाया</string>
    <string name="please_enter_your_mobile_number">अपना मोबाइल नंबर डालें</string>
    <string name="create_unique_user_name">अपना यूनीक यूज़र नेम बनाएं</string>
    <string name="this_username_already_exists">ये यूज़र नेम पहले से उपयोग में लाया जा चुका है</string>
    <string name="enter_otp">ओटीपी डालें</string>
    <string name="wrong_otp">ओटीपी गलत है</string>
    <string name="resend_otp">ओटीपी दोबारा भेजें</string>
    <string name="login">लॉग इन</string>
    <string name="choose_your_interests">अपनी रुचियां सेलेक्ट करें</string>
    <string name="follow">फॉलो</string>
    <string name="name">नाम/नेम</string>
    <string name="enter_valid_otp">सही ओटीपी डालें</string>
    <string name="select_gender">अपना जेंडर चुनें</string>
    <string name="enter_valid_username">सही यूज़र नेम डालें</string>
    <string name="hot">हॉट</string>
    <string name="fresh">फ्रेश</string>
    <string name="create">बनाएं</string>
    <string name="new_image_gif_post">नई इमेज पोस्ट</string>
    <string name="link_post">लिंक पोस्ट</string>
    <string name="new_video_post">नई वीडियो पोस्ट</string>
    <string name="new_link_post">नई लिंक पोस्ट</string>
    <string name="post">पोस्ट</string>
    <string name="choose_a_community">अपने ग्रुप्स चुनें</string>
    <string name="post_title">पोस्ट टाइटल</string>
    <string name="description_optional"></string>
    <string name="paste_your_link_here">लिंक यहां पेस्ट करें</string>
    <string name="http__"></string>
    <string name="new_image_post">नई इमेज पोस्ट</string>
    <string name="add_image_gif">इमेज ऐड करें</string>
    <string name="tap_here_to_open_camera">कैमरा चालू करने के लिए यहां टैप करें</string>
    <string name="add_video">वीडियो ऐड करें</string>
    <string name="my_communities">मेरे ग्रुप्स</string>
    <string name="trending_communities">ट्रेंडिंग ग्रुप्स</string>
    <string name="community_name">ग्रुप का नाम</string>
    <string name="enter_valid_url">सही यूआरएल डालें</string>
    <string name="enter_url">यूआरएल डालें</string>
    <string name="enter_title">टाइटल डालें</string>
    <string name="choose_community">ग्रुप चुनें</string>
    <string name="successful_posted">पोस्ट हो गया</string>
    <string name="attached_image_to_post">पोस्ट में इमेज अटैच करो</string>
    <string name="attached_video_to_post">पोस्ट में वीडियो अटैच करो</string>
    <string name="notifications">नोटिफिकेशन</string>
    <string name="there_are_no_notifications_here">कोई नोटिफिकेशन नहीं है</string>
    <string name="following">फॉलोइंग</string>
    <string name="followers">फॉलोअर्स</string>
    <string name="join">जॉइन</string>
    <string name="comments">कमेंट्स</string>
    <string name="about">बारे में</string>
    <string name="communities">ग्रुप्स</string>
    <string name="posts">पोस्ट</string>
    <string name="ago">पहले</string>
    <string name="now">अभी</string>
    <string name="date_util_term_less">से कम</string>
    <string name="date_util_term_a">ए</string>
    <string name="date_util_term_an">एन</string>
    <string name="date_util_unit_second">सेकेंड</string>
    <string name="date_util_unit_seconds">सेकेंड्स</string>
    <string name="date_util_unit_minute">मिनट</string>
    <string name="date_util_unit_minutes">मिनट्स</string>
    <string name="date_util_unit_hour">घंटा</string>
    <string name="date_util_unit_hours">घंटे</string>
    <string name="date_util_unit_day">दिन</string>
    <string name="date_util_unit_days">दिन</string>
    <string name="date_util_unit_month">महीना</string>
    <string name="date_util_unit_months">महीने</string>
    <string name="date_util_unit_year">साल</string>
    <string name="date_util_unit_years">साल</string>
    <string name="date_util_prefix_lt"></string>
    <string name="date_util_prefix_about"></string>
    <string name="date_util_prefix_over"></string>
    <string name="date_util_prefix_almost"></string>
    <string name="date_util_suffix">पहले</string>
    <string name="edit_profile">प्रोफ़ाइल एडिट करें</string>
    <string name="gzb_search">ग़ज़ब सर्च</string>
    <string name="text">टेक्स्ट</string>
    <string name="view_all">व्यू ऑल</string>
    <string name="settings">सेटिंग</string>
    <string name="notification">नोटिफिकेशन</string>
    <string name="account">अकाउंट</string>
    <string name="privacy_policy">प्राइवेसी पॉलिसी</string>
    <string name="dark_mode">डार्क मोड</string>
    <string name="logout">लॉग आउट</string>
    <string name="user_arrangement">यूज़र अरेंजमेंट</string>
    <string name="user_agreement">यूज़र एग्रीमेंट</string>
    <string name="username">यूज़रनेम</string>
    <string name="copy_link">लिंक कॉपी करें</string>
    <string name="download">डाउनलोड</string>
    <string name="delete">हटाना</string>
    <string name="report">रिपोर्ट</string>
    <string name="reply">रिप्लाई</string>
    <string name="comment_here">यहां कमेंट करें</string>
    <string name="enter_valid_comment">सही कमेंट डालें</string>
    <string name="communication_error">कम्युनिकेशन एरर</string>
    <string name="new_text_post">नई टेक्स्ट पोस्ट</string>
    <string name="choose_background_color">बैकग्राउंड का रंग चुनें</string>
    <string name="_0000">0000</string>
    <string name="activity">एक्टिविटी</string>
    <string name="dumy_text">यहां कुछ तो लिखना पड़ेगा</string>
    <string name="profile">प्रोफाइल</string>
    <string name="edit">एडिट</string>
    <string name="edit_cover_photo">एडिट कवर फोटो</string>
    <string name="save">सेव</string>
    <string name="bio">बायो</string>
    <string name="username_">यूजरनेम</string>
    <string name="email">ईमेल</string>
    <string name="email_">ईमेल</string>
    <string name="password_">पासवर्ड</string>
    <string name="create_password">पासवर्ड बनाएं</string>
    <string name="delete_account">डिलीट अकाउंट</string>
    <string name="attached_image_to_profile">प्रोफाइल में इमेज जोड़ें</string>
    <string name="content_copied">कंटेंट कॉपी हो गया है</string>
    <string name="no_content_to_copy">कॉपी करने के लिए कंटेंट नहीं है</string>
    <string name="download_started">डाउनलोड शुरु हो गयी है</string>
    <string name="no_content_to_download">डाउनलोड करने के लिए कंटेंट नहीं है</string>
    <string name="post_reported">पोस्ट रिपोर्टेड</string>
    <string name="add_bio">Add Bio</string>
    <string name="loading">लोडिंग</string>
    <string name="share">शेयर</string>
    <string name="more_reply">बहोत रिप्लाई</string>
    <string name="less_reply">कम रिप्लाई</string>
    <string name="replying">रीप्लाईंग</string>
    <string name="please_enter_comment">कृपया कमेंट डाले</string>
    <string name="comment_posted_successfully">आपका कमेंट पोस्ट हो गया है</string>
    <string name="couldnt_find_your_group">आपके द्वारा सर्च किया ग्रुप नहीं मिला है</string>
    <string name="version_code">वर्जन कोड</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>

</resources>