<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/edit_profile_back">
    <LinearLayout
        android:padding="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:adjustViewBounds="true"
                android:id="@+id/ivBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/back_screen"/>

            <com.gazabapp.customeview.TextView_custom
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="?attr/profile_text_sub"
                android:text="@string/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.gazabapp.customeview.TextView_custom
                android:layout_gravity="right"
                android:id="@+id/tvSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/save"
                android:textColor="?attr/profile_text_sub"
                android:textSize="18dp" />

        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.gazabapp.customeview.TextView_custom
                android:visibility="gone"
                android:id="@+id/tvEditPhoto"
                android:layout_gravity="center"
                android:textColor="?attr/profile_text_sub"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/edit"
                android:background="@drawable/circle_hightlight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/profile_pic_placeholder"
                android:id="@+id/ivProfilePhoto"
                android:layout_width="150dp"
                android:layout_height="150dp"/>
            <ImageView
                android:layout_marginTop="@dimen/padding_10"
                android:layout_marginLeft="110dp"
                android:src="@drawable/add_pic_plus_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"/>
        </RelativeLayout>

        <com.gazabapp.customeview.TextView_custom
            android:layout_marginTop="10dp"
            android:textColor="?attr/profile_text_sub"
            android:textStyle="bold"
            android:text="@string/bio"
            android:textSize="16dp"
            android:minHeight="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.gazabapp.customeview.EditText_custom
            android:padding="5dp"
            android:id="@+id/etBio"
            android:textColor="?attr/profile_text_sub"
            android:textStyle="bold"
            android:textSize="18dp"
            android:minHeight="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <requestFocus/>
        </com.gazabapp.customeview.EditText_custom>
        <com.gazabapp.customeview.TextView_custom
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:textColor="?attr/profile_highlight"
            android:textStyle="bold"
            android:text="@string/username_"
            android:textSize="16dp"
            android:minHeight="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.gazabapp.customeview.TextView_custom
            android:visibility="gone"
            android:id="@+id/tvUserName"
            android:textColor="?attr/profile_text_sub"
            android:textStyle="bold"
            android:text="@string/username"
            android:textSize="18dp"
            android:minHeight="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.gazabapp.customeview.TextView_custom
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:textColor="?attr/profile_highlight"
            android:textStyle="bold"
            android:text="@string/email_"
            android:textSize="16dp"
            android:minHeight="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.gazabapp.customeview.TextView_custom
            android:visibility="gone"
            android:id="@+id/tvEmail"
            android:textColor="?attr/profile_text_sub"
            android:textStyle="bold"
            android:text="@string/email"
            android:textSize="18dp"
            android:minHeight="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.gazabapp.customeview.TextView_custom
                    android:textColor="?attr/profile_highlight"
                    android:textStyle="bold"
                    android:text="@string/password_"
                    android:textSize="16dp"
                    android:minHeight="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.gazabapp.customeview.TextView_custom
                    android:textColor="?attr/profile_text_sub"
                    android:textStyle="bold"
                    android:text="@string/create_password"
                    android:textSize="18dp"
                    android:minHeight="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <ImageView
                android:layout_gravity="bottom"
                android:id="@+id/ivCreatePassword"
                android:adjustViewBounds="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/next_arrow"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:clickable="true"
            android:id="@+id/liDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.gazabapp.customeview.TextView_custom

                android:textColor="?attr/profile_text_sub"
                android:textStyle="bold"
                android:text="@string/delete_account"
                android:textSize="16dp"
                android:minHeight="0dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/ivDeleteAccount"
                android:adjustViewBounds="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/next_arrow"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
