<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/notification_back">
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/app_bar">
        <com.gazabapp.customeview.TextView_custom
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="?attr/notification_title"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.gazabapp.customeview.TextView_custom
                android:minHeight="0dp"
                android:textStyle="bold"
                android:textSize="22dp"
                android:textColor="?attr/text_setting"
                android:text="@string/notification"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swNotification"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                app:track="@drawable/custom_track"
                android:thumb="@drawable/custom_thumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.gazabapp.customeview.TextView_custom
                android:minHeight="0dp"
                android:textStyle="bold"
                android:textSize="22dp"
                android:textColor="?attr/text_setting"
                android:text="@string/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.gazabapp.customeview.TextView_custom
                android:paddingLeft="20dp"
                android:id="@+id/tvUserName"
                android:minHeight="0dp"
                android:textSize="20dp"
                android:textColor="?attr/text_setting_subtext"
                android:text="@string/username"
                android:gravity="right"
                android:maxLines="1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.gazabapp.customeview.TextView_custom
                android:id="@+id/tvUserArrangement"
                android:minHeight="0dp"
                android:textStyle="bold"
                android:textSize="22dp"
                android:textColor="?attr/text_setting"
                android:text="@string/user_agreement"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.gazabapp.customeview.TextView_custom
                android:id="@+id/tvPrivacyPolicy"
                android:minHeight="0dp"
                android:textStyle="bold"
                android:textSize="22dp"
                android:textColor="?attr/text_setting"
                android:text="@string/privacy_policy"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.gazabapp.customeview.TextView_custom
                android:minHeight="0dp"
                android:textStyle="bold"
                android:textSize="22dp"
                android:textColor="?attr/text_setting"
                android:text="@string/dark_mode"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.SwitchCompat

                android:id="@+id/swDarkMode"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                app:track="@drawable/custom_track"
                android:thumb="@drawable/custom_thumb"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.gazabapp.customeview.TextView_custom
                android:minHeight="0dp"
                android:textStyle="bold"
                android:textSize="22dp"
                android:textColor="?attr/text_setting"
                android:text="@string/version_code"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <com.gazabapp.customeview.TextView_custom
                android:paddingLeft="20dp"
                android:id="@+id/tvVersionCode"
                android:minHeight="0dp"
                android:textSize="20dp"
                android:textColor="?attr/text_setting_subtext"
                android:text=""
                android:gravity="right"
                android:maxLines="1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.gazabapp.customeview.TextView_custom
                android:id="@+id/tvLogout"
                android:minHeight="0dp"
                android:textStyle="bold"
                android:textSize="22dp"
                android:textColor="?attr/text_setting"
                android:text="@string/logout"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>




</LinearLayout>
